<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailFragment">
        <ImageView
            android:id="@+id/dogImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/Dog_image_Description"
            android:src="@mipmap/ic_dog_icon"
            android:scaleType="fitCenter"
            android:minHeight="200dp"/>
        <TextView
            android:id="@+id/dogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dogImage"
            android:text="@string/Dog_Name"
            style="@style/Title"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"/>

        <TextView
            android:id="@+id/dogPurpose"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dogName"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:text="@string/Dog_Purpose" />

        <TextView
            android:id="@+id/dogTemperament"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dogPurpose"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:text="@string/Dog_Temperament" />

        <TextView
            android:id="@+id/dogLifeSpan"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dogTemperament"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:text="@string/Life_Span" />
    </RelativeLayout>
</layout>
